2008-08-03  Miloslav Trmač  <mitr@redhat.com>

	* userhelper-wrap.c (debug_msg)
	* userhelper.c (debug_msg)
	* userinfo.c (debug_msg): New macro.  Use it instead of surrounding
	debug prints with #ifdef DEBUG_USERHELPER.

2008-05-17  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (wrap): Remove /usr/X11R6/bin from the default path.
	Original patch by Michel Samia <msamia@redhat.com>.

2008-05-01  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Rename from configure.in.  Version 1.97.
	* NEWS: Update.

	* userhelper-wrap.c (userhelper_parse_childout): Don't interpret '_'
	in prompts as mnemonic character markup.

2008-04-10  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Version 1.96.1.
	* NEWS: Update.

2008-03-23  Miloslav Trmač  <mitr@redhat.com>

	* po/hu.po: Updated Hungarian translation by Lónyai Gergely
	<aleph@mandriva.org>.

2008-02-29  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Version 1.96.
	* NEWS: Update.

	* userhelper.c (selinux_enabled, get_init_context, setup_selinux_exec)
	(setup_selinux_root_exec, setup_selinux_user_exec): Remove.
	(wrap): Don't override SELinux contexts of created processes.
	(main): Inline the is_selinux_enabled() call now that selinux_enabled
	is not used anywhere else.

2008-02-25  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Version 1.95.
	* NEWS: Update.

	* userhelper.c (wrap): Fix returning the exit code of the child process
	if (session).

	* README: Add some content.

	* userinfo.desktop.in (Icon)
	* usermount.desktop.in (Icon)
	* userpasswd.desktop.in (Icon): Remove extension from the icon name
	to allow non-PNG themes.

	* userinfo.desktop.in (Encoding)
	* usermount.desktop.in (Encoding)
	* userpasswd.desktop.in (Encoding): Remove (the item is obsolete).

2008-02-24  Miloslav Trmač  <mitr@redhat.com>

	* userinfo.desktop.in (Categories): Add missing trailing semicolon.

	* po/POTFILES.in: Add gsmclient.c.  Sort alphabetically.

	* Makefile.am (HGTAG): Replace CVSTAG.